# my-rust-discord-Bot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: game.rs  lib.rs  main.rs  todo.rs
