[package]
name = "discord-game-bot"
version = "0.1.0"
edition = "2021"

# ── 明確宣告兩個 binary 入口 ──────────────────────────────────────────────
[[bin]]
name = "bot"
path = "src/bin/bot.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"
required-features = ["web"]          # cargo build --bin web 必須加 --features web

# ── 共用依賴 ──────────────────────────────────────────────────────────────
[dependencies]
rand       = "0.8"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Bot 專用（native only）────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "builder", "http"] }
tokio    = { version = "1.0",  features = ["full"] }
dotenvy  = "0.15.7"
reqwest  = { version = "0.11", features = ["json"], default-features = false }

# ── Web feature：讓 rust-analyzer（native 目標）也能解析 dioxus 型別 ──────
# 用 optional dependency + feature flag，而不是 cfg(target_arch)，
# 這樣 rust-analyzer 在 native 模式下啟用 "web" feature 時也能找到型別。
[dependencies.dioxus]
version  = "0.6"
features = ["web"]
optional = true                      # 不加 --features web 就不會編進 native bot

[dependencies.getrandom]
version  = "0.2"
features = ["js"]
optional = true

# ── Feature 定義 ──────────────────────────────────────────────────────────
[features]
default = []
web = ["dioxus", "getrandom"]        # dx serve 會自動傳遞；也可手動 --features web